--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,13 @@
 ---
-
+import Layout from '@/layouts/layout.astro';
+import Hero from '@/sections/hero.astro';
+import About from '@/sections/about.astro';
+import Contact from '@/sections/contact.astro';
+import NavBar from '@/layouts/nav-bar.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+  <Hero />
+  <!-- <About />
+  <Contact /> -->
+</Layout>
