--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,10 @@ import Layout from '@/layouts/layout.astro';
 import Hero from '@/sections/hero.astro';
 import About from '@/sections/about.astro';
 import Contact from '@/sections/contact.astro';
-import NavBar from '@/layouts/nav-bar.astro';
 ---
 
 <Layout>
   <Hero />
-  <!-- <About />
-  <Contact /> -->
+  <About />
+  <Contact />
 </Layout>
