--- a/src/sections/contact.astro
+++ b/src/sections/contact.astro
@@ -1,18 +1,26 @@
 ---
-import Button from '@/components/button.astro';
-import Mail from '@lucide/astro/icons/mail';
 import Github from '@lucide/astro/icons/github';
 import Linkedin from '@lucide/astro/icons/linkedin';
 import Twitter from '@lucide/astro/icons/twitter';
+import Youtube from '@lucide/astro/icons/youtube';
 
 const socialLinks = [
+  {
+    href: 'https://linkedin.com/in/elylucas',
+    icon: Linkedin,
+    label: 'LinkedIn',
+  },
   { href: 'https://github.com/elylucas', icon: Github, label: 'GitHub' },
-  { href: 'https://linkedin.com/in/elylucas', icon: Linkedin, label: 'LinkedIn' },
-  { href: 'https://twitter.com/elaboratecoder', icon: Twitter, label: 'Twitter' },
+  {
+    href: 'https://www.youtube.com/@elylucasdev',
+    icon: Youtube,
+    label: 'YouTube',
+  },
+  { href: 'https://x.com/elylucas', icon: Twitter, label: 'X' },
 ];
 ---
 
-<section class="container mx-auto px-6 py-24">
+<section class="container mx-auto px-6 py-6">
   <div class="max-w-2xl mx-auto text-center space-y-8">
     <h2
       class="text-3xl md:text-4xl font-bold opacity-0 animate-fade-in-slow animation-delay-100"
@@ -22,21 +30,21 @@ const socialLinks = [
     <p
       class="text-lg text-muted-foreground opacity-0 animate-fade-in-slow animation-delay-200"
     >
-      Have a question, want to collaborate, or just say hi? I'd love to hear from
-      you.
+      Have a question, want to collaborate, or just say hi? I'd love to hear
+      from you.
     </p>
 
-    <div class="opacity-0 animate-fade-in-slow animation-delay-300">
+    <!-- <div class="opacity-0 animate-fade-in-slow animation-delay-300">
       <a href="mailto:ely@elylucas.com">
         <Button size="lg">
           <Mail class="w-5 h-5" />
           Send me an email
         </Button>
       </a>
-    </div>
+    </div> -->
 
     <div
-      class="flex justify-center gap-4 pt-4 opacity-0 animate-fade-in-slow animation-delay-400"
+      class="flex! justify-center gap-4 pt-4 opacity-0 animate-fade-in-slow animation-delay-400"
     >
       {
         socialLinks.map(({ href, icon: Icon, label }) => (
