--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -10,8 +10,8 @@ import ArrowRight from '@lucide/astro/icons/arrow-right';
       <h1
         class="text-5xl md:text-6xl lg:text-7xl font-bold leading-tight opacity-0 animate-fade-in-slow animation-delay-500"
       >
-        Do you <span class="text-primary glow-text">dream</span>
-        in <span class="font-serif italic font-normal">code?</span>
+        Helping <span class="text-primary glow-text">Developers</span> Build Better
+        <span class="font-serif italic font-normal">Software</span>
       </h1>
 
       <div class="opacity-0 animate-fade-in-slow animation-delay-400">
@@ -48,9 +48,7 @@ import ArrowRight from '@lucide/astro/icons/arrow-right';
     </div>
 
     <!-- Right column: Pixel robot -->
-    <div
-      class="flex justify-center order-1 lg:order-2"
-    >
+    <div class="flex justify-center order-1 lg:order-2">
       <img
         src="/assets/pixel_laptop.png"
         alt="Pixel the robot on a laptop"
